[package]
name = "gravity-restaking"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.48.0"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "27085fb"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "27085fb"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.48.0"
